Prevent line from overlapping button

--- a/src/components/Hero/Assumptions/Assumptions.module.scss
+++ b/src/components/Hero/Assumptions/Assumptions.module.scss
@@ -187,9 +187,10 @@
 
 .line {
   position:absolute;
+  z-index: -1;
   width:2px;
-  margin-top:-5px;
-  height:35px;
+  margin-top:-4px;
+  height:34px;
   border-right:2px dashed rgba(#fff, .5);
   top:100%;
   left:26px;
